# Smart-Class-Selection-backend

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py  deps.py  errors_handler.py  path_compat.py
app/api/handlers/: __init__.py  admin.py  ai.py  courses.py  enrollments.py  health.py  study_plans.py  teaching.py
app/core/: __init__.py  auth.py  config.py  db.py  errors.py  http.py  logging.py  mq.py  redis.py
app/domain/: __init__.py  audit.py  enrollment.py  enums.py  offering.py  ports.py  study_plan.py
app/engine/: __init__.py  capacity_lock.py  lottery_runner.py  waiting_room.py
app/integrations/: __init__.py  info_client.py  llm_client.py  schedule_client.py
app/repositories/: __init__.py  audit_repo.py  capacity_repo.py  enrollment_repo.py  offering_cache_repo.py  outbox_repo.py  study_plan_repo.py
app/schemas/: __init__.py  ai.py  common.py  enrollment.py  study_plan.py
app/services/: __init__.py  ai_advisor.py  enrollment_service.py  lottery_service.py  reconciler.py  rule_engine.py  study_plan_service.py
app/tasks/: __init__.py  prefetch_offerings.py  publish_outbox.py  reconcile.py  refresh_curriculum.py
deploy/: Dockerfile  docker-compose.yml  gateway-course-selection.conf  nginx.conf  网关接入指南.md
docs/: TEST_REPORT.md  接口契约-跨组对外.md  接口文档-前端对内.md
migrations/: 001_init.sql
tests/: conftest.py  fakes.py  seed.sql
tests/e2e/: conftest.py  test_http_admin_and_enroll.py  test_http_flows.py  test_http_more.py
tests/integration/: test_anti_oversell.py  test_lottery.py  test_repositories.py  test_waiting_room.py
tests/load/: enrollment_load.js
tests/unit/: test_core.py  test_enrollment_service.py  test_integrations.py  test_other_services.py  test_path_compat.py  test_rule_engine.py  test_stock_store.py  test_tasks.py
